# riichi-zk

./: .gitignore  README.md  RELEASE_NOTES.md  SUBMISSION_CHECKLIST.md  deploy.sh  foundry.toml  package-lock.json  package.json
circuits/: EngineOutputInvariant.circom  EngineOutputInvariant_main.circom
contracts/: EngineOutputInvariantVerifier.sol  MockVerifier.sol  RiichiSettlementV1_1.sol
frontend/: README.md  app.js  index.html  styles.css
frontend/wasm/ziffle/: package.json  ziffle_wasm.d.ts  ziffle_wasm.js  ziffle_wasm_bg.wasm  ziffle_wasm_bg.wasm.d.ts
reference/: engineHash.ts
script/: Deploy.s.sol  README.md
scripts/: prove_example.mjs  prove_example.sh
server/: README.md  package.json
server/src/: engineHash.js  index.js  prover.js  simpleEngine.js  tiles.js
test/: RiichiSettlement.sim.t.sol  RiichiSettlement.spec.js  RiichiSettlement.t.sol
wasm/ziffle-wasm/: Cargo.toml
wasm/ziffle-wasm/src/: lib.rs
