[package]
name = "ziffle-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ziffle = "0.1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
ark-serialize = "0.5"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
once_cell = "1.19"
serde-wasm-bindgen = "0.6"
